# ProfileSwitcher

./: CMakeLists.txt  buildspec.json
.github/workflows/: build-macos.yml  build-project.yaml  build-ubuntu.yml  build-windows.yml
data/locale/: en-US.ini
src/: log.hpp  plugin-main.cpp  profile_dock.cpp  profile_dock.cpp.original  profile_dock.hpp
